[tool.poetry]
name = "osint-scanner"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.1"
uvicorn = "0.29.0"

[tool.poetry.group.test.dependencies]
ruff = "0.3.5"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
